zimit/frontend/zimit-frontend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zimit
  labels:
    app: zimit-frontend-api-app
  name: zimit-frontend-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zimit-frontend-api-app
  template:
    metadata:
      labels:
        app: zimit-frontend-api-app
    spec:
      containers:
      - image: ghcr.io/openzim/zimit-frontend-api:latest
        imagePullPolicy: Always
        name: zimit-frontend-api
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
      dnsConfig: # temporary workaround, see https://github.com/kiwix/operations/issues/773
        options:
          - name: ndots
            value: "2"
      nodeSelector:
        k8s.kiwix.org/role: "services-new"
---
apiVersion: v1
kind: Service
metadata:
  namespace: zimit
  name: zimit-frontend-api-service
  labels:
    app: zimit-frontend-api-app
spec:
  selector:
    app: zimit-frontend-api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
